--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -91,12 +91,10 @@
                     dataType: "json",
                     success: function(data){
                         if(data.code == 200){
-                            if(data.data.data != null){
-                                layer.msg("登陆成功!",{icon: 1});
-                                setTimeout(window.location.href="/page/main.html",1000);
-                            }else{
-                                layer.msg("用户名密码错误，请重试!",{icon: 2});
-                            }
+                            layer.msg(data.message,{icon: 1});
+                            setTimeout(window.location.href="/page/main.html",1000);
+                        }else {
+                        layer.msg(data.message, {icon: 2});
                         }
                     }
                 })
